@@ -3,8 +3,8 @@ package io.kafbat.ui.container;
 import io.confluent.kafka.schemaregistry.client.CachedSchemaRegistryClient;
 import io.confluent.kafka.schemaregistry.client.SchemaRegistryClient;
 import org.testcontainers.containers.GenericContainer;
-import org.testcontainers.containers.KafkaContainer;
 import org.testcontainers.containers.Network;
+import org.testcontainers.kafka.ConfluentKafkaContainer;
 
 public class SchemaRegistryContainer extends GenericContainer<SchemaRegistryContainer> {
   private static final int SCHEMA_PORT = 8081;
@@ -14,8 +14,8 @@ public class SchemaRegistryContainer extends GenericContainer<SchemaRegistryCont
     withExposedPorts(8081);
   }
 
-  public SchemaRegistryContainer withKafka(KafkaContainer kafka) {
-    String bootstrapServers = kafka.getNetworkAliases().get(0) + ":9092";
+  public SchemaRegistryContainer withKafka(ConfluentKafkaContainer kafka) {
+    String bootstrapServers = kafka.getNetworkAliases().getFirst() + ":9095";
     return withKafka(kafka.getNetwork(), bootstrapServers);
   }
 
